
message std_frame {
    required uint64 address = 1;
    required uint64 thread_id = 2;
    required bytes rawbytes = 3;
    required operand_value_list operand_pre_list = 4;
    optional operand_value_list operand_post_list = 5;
}

message operand_value_list {
    repeated operand_info elem = 1;
}

message operand_info {
    required operand_info_specific operand_info_specific = 1;
    required sint32 bit_length = 2;
    required operand_usage operand_usage = 3;
    required taint_info taint_info = 4;
    required bytes value = 5;
}

message operand_info_specific {
    optional mem_operand mem_operand = 1;
    optional reg_operand reg_operand = 2;
}

message reg_operand {
    required string name = 1;
}

message mem_operand {
    required uint64 address = 1;
}

message operand_usage {
    required bool read = 1;
    required bool written = 2;
    required bool index = 3;
    required bool base = 4;
}

message taint_info {
    optional bool no_taint = 1;
    optional uint64 taint_id = 2;
    optional bool taint_multiple = 3;
}

